[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "react2scan"
version = "1.0.0"
description = "Infrastructure vulnerability scanner"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Miggo Security" }]
dependencies = [
    "cloudflare>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
react2scan = "react2scan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/react2scan"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
